<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Air Quality Now</string>
    <string name="mainTableFirstRow">Air Quality Forecast</string>
    <string name="todayHi">Today\'s Hi</string>
    <string name="tomorrowHi">Tomorrow\'s Hi</string>
    <string name="reportingAreaHeader">Reporting Area</string>
    <string name="todayHeader">Observed</string>
    <string name="tomorrowHeader">Forecast</string>
    <string name="currentConditions">Air Quality Index (AQI)</string>
    <string name="dataNotAvailable">Data not Available</string>
    <string name="fourdayForecastTableDay">Day</string>
    <string name="fourdayForecastPM10">PM10</string>
    <string name="fourdayForecastPM25">PM25</string>
    <string name="fourdayForecastOzone">Ozone</string>
    <string name="fourdayForecastActionDay">Action Day</string>
    <string name="zipCodeInputSubmit">Submit</string>
    <string name="zipCodeInputCancel">Cancel</string>
	<string name="eula_title">End User License Agreement</string>
    <string name="ok">OK</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="request">Request!</string>
    <string name="hello">Hello World!</string>
    <string name="upload">Upload Photo</string><string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
    <string name="reportingAreasButton">Reporting Areas</string>
    <string name="observedButton">Observed</string>
    <string name="mapPoints">Map Points-Soon</string>
    <string name="enterZipCode">Zip Code</string>
    <string name="healthMessage">Health Message</string>
    <string name="observations">Observations</string>
    <string name="defaultReportingAreaNotSet">Default reporting area not set</string>
    <string name="defaultObserved">now default observed.</string>
    <string name="observed">Observed</string>
    <string name="observation">Observation</string>
    <string name="forecast">Forecast</string>
    <string name="forecasts">Forecasts</string>
    <string name="defaultArea">Set as default</string>
    <string name="addReportingArea">Add Reporting Area</string>
    <string name="zipCodeDigitLimit">Zip code must be 5 digits only.</string>
    <style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textSize">30dp</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
</resources>
