<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/observedLinearLayout" 
 	android:orientation="vertical" 
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
     android:background="@drawable/sky"
     >
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/observedTableActionMenu"
		   android:orientation="vertical"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   >
         	<TableRow>
			    <Button
			  		android:id="@+id/observedTableBackToListTextView"
			          android:layout_width="wrap_content"
			          android:layout_height="fill_parent"
			       />
	         	<Button
		  			android:id="@+id/observedTableAddTextView"
		          	android:layout_width="wrap_content"
		          	android:layout_height="fill_parent"
		          	android:drawableLeft="@drawable/ic_menu_add"
	       		/>
         	</TableRow>
      </TableLayout>
      <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/observedTable"
		   android:orientation="vertical"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content">
		   <TableRow>
				<TextView
         	    	android:id="@+id/observedTableReportingAreaTextView" 
				   	android:layout_width="0px"
		        	android:layout_weight="1"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="center"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				    android:text="Reporting Area"
					/>         	
         	</TableRow>
         	<TableRow>
				<TextView
         	    	android:id="@+id/observedTableCurrentLabelTextView" 
				   	android:layout_width="0px"
		        	android:layout_weight="1"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="center"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				    android:text="@string/currentConditions"
					/>         	
         	</TableRow>
         	<TableRow>
				<TextView
         	    	android:id="@+id/observedTableCurrentAQILabelTextView" 
				   	android:layout_width="0px"
		        	android:layout_weight="1"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="center"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				    android:text="Air Quality Index (AQI)"
					/>
			</TableRow>
			<TableRow>
				<TextView
         	    	android:id="@+id/observedTableCurrentAQITimeDescTextView" 
				    android:layout_width="0px"
		        	android:layout_weight="1"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="center"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				    android:text="Observed at"
					/>
			</TableRow>
			<TableRow>
				<TextView
         	    	android:id="@+id/observedTableCurrentAQITextView" 
				   	android:layout_width="0px"
		        	android:layout_weight="1"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="center"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
					/>
			</TableRow>
			<TableRow>
				<TextView
         	    	android:id="@+id/observedTableCurrentAQIMsgTextView" 
				    android:layout_width="0px"
		        	android:layout_weight="1"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="center"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				    android:text="Health Message"
					/>	
         	</TableRow>
     </TableLayout>
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		   android:id="@+id/forecastTableActionMenu"
		   android:orientation="vertical"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content">
         	<TableRow>
         		<TextView
         	    	android:id="@+id/forecastTableTodayTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".5"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="center"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				    android:text="@string/todayHi"
				/>
				<TextView
         	    	android:id="@+id/forecastTableTomorrowTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".5"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="center"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				    android:text="@string/tomorrowHi"
				/>
         	</TableRow>
			<TableRow>
				<TextView
         	    	android:id="@+id/forecastTableTodayAQITextView" 
				   	android:layout_width="0px"
		        	android:layout_weight=".10"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
					/>
				<TextView
         	    	android:id="@+id/forecastTableTodayAQIDescTextView" 
				    android:layout_width="0px"
		        	android:layout_weight=".40"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				    android:text="@string/dataNotAvailable"
					/>
				<TextView
         	    	android:id="@+id/forecastTableTomorrowAQITextView" 
				   	android:layout_width="0px"
		        	android:layout_weight=".10"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
					/>
				<TextView
         	    	android:id="@+id/forecastTableTomorrowAQIDescTextView" 
				    android:layout_width="0px"
		        	android:layout_weight=".40"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				    android:text="@string/dataNotAvailable"
					/>	
			</TableRow>
         	<TableRow>
         		<TextView
         	    	android:id="@+id/forecastTableTodayMsgTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".5"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         		<TextView
         	    	android:id="@+id/forecastTableTomorrowMsgTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".5"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         	</TableRow>
         	<TableRow>
         		<TextView
         	    	android:id="@+id/forecastTableTodayActionDayTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".5"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         		<TextView
         	    	android:id="@+id/forecastTableTomorrowActionTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".5"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         	</TableRow>
         	<TableRow>
         		<TextView
         	    	android:id="@+id/forecastTableTodayPollutantDetailTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".5"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         		<TextView
         	    	android:id="@+id/forecastTableTomorrowPollutDetailTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".5"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         	</TableRow>
         	<TableRow>
         		<TextView
         	    	android:id="@+id/forecastTableTodayPM25TextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         		<TextView
         	    	android:id="@+id/forecastTableTodayPM25AQITextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
				<TextView
         	    	android:id="@+id/forecastTableTodayPM25AQIDescTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
				<TextView
         	    	android:id="@+id/forecastTableTomorrowPM25TextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         		<TextView
         	    	android:id="@+id/forecastTableTomorrowPM25AQITextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
				<TextView
         	    	android:id="@+id/forecastTableTomorrowPM25AQIDescTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         	</TableRow>
         	<TableRow>
         		<TextView
         	    	android:id="@+id/forecastTableTodayOzoneTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         		<TextView
         	    	android:id="@+id/forecastTableTodayOzoneAQITextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
				<TextView
         	    	android:id="@+id/forecastTableTodayOzoneAQIDescTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
				<TextView
         	    	android:id="@+id/forecastTableTomorrowOzoneTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         		<TextView
         	    	android:id="@+id/forecastTableTomorrowOzoneAQITextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
				<TextView
         	    	android:id="@+id/forecastTableTomorrowOzoneAQIDescTextView" 
				    android:layout_width="0px"
			        android:layout_weight=".16"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:gravity="left"
				    android:paddingLeft="5dip"
				    android:singleLine="true"
				    android:textColor="#000000"
				    android:layout_margin="1dip"
				/>
         	</TableRow>
   </TableLayout>

</LinearLayout>